[webui] Fix line wrapping in allelesidebar

--- a/src/webui/src/sass/_general-layout.scss
+++ b/src/webui/src/sass/_general-layout.scss
@@ -486,7 +486,7 @@ nav.warning { display: flex; align-items: center; justify-content: space-between
     }
     &.multiple { background-color: $blue-10; }
     &.spacer {height: 0.2rem}
-    .cell { display: table-cell; vertical-align: middle; font-weight: 600; padding: 0 0.3rem; transition: all 0.3s ease-in-out; text-overflow: ellipsis; overflow: hidden;
+    .cell { display: table-cell; white-space: nowrap; vertical-align: middle; font-weight: 600; padding: 0 0.3rem; transition: all 0.3s ease-in-out; text-overflow: ellipsis; overflow: hidden;
       &.sample-type { max-width: 10rem; font-weight: 400; font-style: normal; font-size: 1.25rem; margin-right: 1.3rem; }
       &.inheritance { max-width: 10rem; font-weight: 400; font-style: normal; font-size: 1.25rem; margin-right: 1.3rem; }
       &.gene { max-width: 10rem; font-weight: 400; font-style: normal; font-size: 1.25rem; margin-right: 1.3rem; }
